// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BackEndRolePage renders correctly for /backend path 1`] = `
Array [
  <RoleBar
    label="Back End Developer"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Robot
      gender="male"
      pose="default"
    />
    <QuoteBubble
      noCopyToClipboard={true}
      variant="thought"
    />
    <ActionButtons
      role="backend"
    />
  </section>,
]
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/brag path 1`] = `
Array [
  <RoleBar
    label="Back End Developer"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Robot
      gender="male"
      pose="brag"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <ActionButtons
      role="backend"
    />
  </section>,
]
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/confess path 1`] = `
Array [
  <RoleBar
    label="Back End Developer"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Robot
      gender="male"
      pose="confess"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <ActionButtons
      role="backend"
    />
  </section>,
]
`;
